<resources>
    <string name="app_name">My Application</string>
    <string name="inicio_contador">10:00</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="plus3">+3</string>
    <string name="x">X</string>
    <string name="equipo_1">Equipo 1</string>
    <string name="puntuacion_team_1">34</string>
    <string name="equipo_2">Equipo 2</string>
    <string name="puntuacion_team_2">18</string>
    <string name="mas">+</string>
    <string name="faltas">Faltas</string>
    <string name="team2_puntos_0">0</string>
    <string name="cant_faltas_team1_0">0</string>
    <string name="editar">Editar</string>
    <string name="compartir">compartir</string>
    <string name="_0">0</string>
    <string name="play">Play</string>
    <string name="_1_quarter">1º</string>
    <string name="bot_n_de_reproducci_n_y_pausa">Botón de reproducción y pausa</string>
</resources>