<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftFaltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightToEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_contador"
        android:textSize="@dimen/text_75sp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        android:textColor="@color/red"
        />

    <TextView
        android:id="@+id/tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1º"
        android:textSize="@dimen/text_55sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/guidelineRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas1Team1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus1"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/btnMas2Team1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintVertical_chainStyle="spread"
        app:cornerRadius="100dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas2Team1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus2"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/btnMas1Team1"
        app:layout_constraintBottom_toTopOf="@id/btnMas3Team1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:cornerRadius="100dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas3Team1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus3"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/txt25sp"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/btnMas2Team1"
        app:layout_constraintBottom_toTopOf="@id/guidelineTeam1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:cornerRadius="100dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas1Team2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus1"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineSeparator"
        app:layout_constraintBottom_toTopOf="@id/btnMas2Team2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintVertical_chainStyle="spread"
        app:cornerRadius="100dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas2Team2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus2"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/btnMas1Team2"
        app:layout_constraintBottom_toTopOf="@id/btnMas3Team2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintVertical_chainStyle="spread"
        app:cornerRadius="100dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMas3Team2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/plus3"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/btnMas2Team2"

        app:layout_constraintBottom_toTopOf="@id/guidelineTeam2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintVertical_chainStyle="spread"
        app:cornerRadius="100dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        app:layout_constraintTop_toBottomOf="@id/guidelineTeam1"
        app:layout_constraintBottom_toTopOf="@id/guidelineSeparator"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:textColor="@color/white"
        android:textSize="@dimen/text_55sp"
        />

    <TextView
        android:id="@+id/team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipo_1"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_45sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntuacion_team_1"
        app:layout_constraintTop_toBottomOf="@id/team1"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintBottom_toTopOf="@id/guidelineTeam1"
        android:textSize="@dimen/txt_150sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipo_2"
        app:layout_constraintTop_toBottomOf="@id/guidelineSeparator"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_45sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntuacion_team_2"
        app:layout_constraintTop_toBottomOf="@id/team2"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintBottom_toTopOf="@id/guidelineTeam2"
        android:textSize="@dimen/txt_150sp"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMasFaltaTeam1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/mas"
        android:textSize="@dimen/txt25sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="0dp"

        app:layout_constraintTop_toBottomOf="@id/guidelineTeam2"
        app:layout_constraintStart_toEndOf="@id/guidelineLeftFaltas"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenterLeft"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintVertical_chainStyle="spread"
        app:cornerRadius="100dp"
        />

    <TextView
        android:id="@+id/faltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Falstas"
        android:textColor="@color/white"
        android:textSize="35sp"



        app:layout_constraintEnd_toStartOf="@id/guidelineCenterRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenterLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTeam2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMasFaltaTeam2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/mas"
        android:textColor="@color/black"
        android:textSize="@dimen/txt25sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintDimensionRatio="1:1"

        app:layout_constraintStart_toEndOf="@id/guidelineCenterRight"
        app:layout_constraintEnd_toStartOf="@id/guidelineRightToEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineTeam2"
        app:layout_constraintVertical_chainStyle="spread" />



</androidx.constraintlayout.widget.ConstraintLayout>